--- a/05-rabbitmq-发布订阅/pom.xml
+++ b/05-rabbitmq-发布订阅/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example.rabbitmq</groupId>
-    <artifactId>02-rabbitmq-消息发布订阅</artifactId>
+    <artifactId>05-rabbitmq-发布订阅</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
