--- a/08-rabbitmq-消息路由-spring/pom.xml
+++ b/08-rabbitmq-消息路由-spring/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.example.rabbitmq.spring</groupId>
-    <artifactId>02-rabbitmq-hello-world-spring</artifactId>
+    <groupId>com.example.rabbitmq</groupId>
+    <artifactId>08-rabbitmq-消息路由-spring</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <parent>
@@ -30,5 +30,4 @@
             <version>1.7.2.RELEASE</version>
         </dependency>
     </dependencies>
-    
 </project>
